gccida/g0/find_reloads_address
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5042:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5045:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5047:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5082:34: error: use of undeclared identifier 'machine_mode'
if ( !strict_memory_address_p( ( machine_mode)*( ( unsigned __int8 *)tem + 2), tem->fld[0].rtx) ) 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5097:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)tem + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5134:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)tem + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5150:31: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
&& !regno_clobbered_p( regno, this_insn_1, mode, 0) ) 
                              ^~~~~~~~~~~
                              this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5160:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ada + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5211:27: error: subscripted value is not an array, pointer, or vector
if ( double_reg_address_ok[0] ) 
     ~~~~~~~~~~~~~~~~~~~~~^~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5219:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v13 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5243:31: error: use of undeclared identifier 'machine_mode'
adb = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)ada + 2), v16, v15); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5249:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)adb + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5266:31: error: use of undeclared identifier 'machine_mode'
adc = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)ada + 2), *( rtx *)( ada->fld[0].rtwint + 8), v17); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5272:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)adc + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5343:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ada + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/reload.c:5378:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)tem + 2), 
  ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address/src/obj/reload.o] Error 1
